<resources>
    <string name="app_name">PifagorApp</string>
    <string name="title">Mach C</string>

    <string name="result_textView">Result:</string>
    <string name="result_btn">Result</string>

    <string name="a_hint">Enter a</string>
    <string name="b_hint">Enter b</string>

    <string name="a_empty">a is empty</string>
    <string name="b_empty">b is empty</string>
    <string name="pifagor_img_descriprion" translatable="false">Pifagor\'s Theorem Image</string>
</resources>